@@ -1,3 +1,4 @@
+* Verify certificate with default CA
 * Replace URL entry by a toolbar button
 
 Version 4.2.0 - 2016-11-28
